# couchdb-old

./: .gitignore  CHANGES  Makefile.am  NOTICE  README  bootstrap  configure.ac
doc/: Makefile  couch_config.html  edoc-info  modules-frame.html  overview-summary.html
etc/: Makefile.am
etc/couchdb/: Makefile.am  couch.ini.tpl.in  default.ini.tpl.in  local.ini  local_dev.ini
share/: Makefile.am
share/server/: echo.js  loop.js  main.js  mimeparse.js  render.js  state.js  util.js  validate.js  views.js
share/www/: couch_tests.html  index.html
share/www/script/: couch.js  couch_test_runner.js  couch_tests.js  jquery.couch.js  sha1.js  srp.js
share/www/script/test/: attachments.js  basics.js  batch_put.js  batch_save.js  bulk_docs.js  changes.js  compact.js  cookie_auth.js  design_docs.js  etags_views.js  list_views.js  replication.js  rewrite.js  security_validation.js  show_documents.js  stats.js  update_documents.js  uuids.js  view_errors.js  view_include_docs.js
src/couchdb/: Makefile.am  couch.app.tpl.in  couch_batch_save.erl  couch_config.erl  couch_config_writer.erl  couch_db.erl  couch_db.hrl  couch_db_update_notifier_sup.erl  couch_db_updater.erl  couch_doc.erl  couch_ft_query.erl  couch_httpd.erl  couch_httpd_auth.erl  couch_httpd_db.erl  couch_httpd_external.erl  couch_httpd_form.erl  couch_httpd_misc_handlers.erl  couch_httpd_proxy_handler.erl  couch_httpd_rewrite.erl  couch_httpd_show.erl  couch_httpd_stats_handlers.erl  couch_httpd_view.erl  couch_js.c  couch_key_tree.erl  couch_log.erl  couch_os_process.erl  couch_query_servers.erl  couch_rep.erl  couch_rpc.erl  couch_server.erl  couch_server_sup.erl  couch_stats_aggregator.erl  couch_stats_collector.erl  couch_task_status.erl  couch_util.erl  couch_view.erl  couch_view_group.erl  couch_view_updater.erl  couchdb_config_writer.erl
src/couchdb/test/: couch_config_test.erl  couch_config_writer_test.erl
src/couchdb/tests/: couch_stats_aggregator_tests.erl  couch_stats_collector_tests.erl
src/ibrowse/: ibrowse.erl
src/mochiweb/: Makefile.am
test/: Makefile  Makefile.am  couch_config_test.erl  couch_config_writer_test.erl  erl_crash.dump  query_server_spec.rb  test.ini  test_runner.beam  test_runner.erl
test/couchjs/spec/: couchjs_spec.rb
test/couchjs/unit/: couchjs_spec.rb
test/query_server/: query_server_spec.rb
